--- a/Heuristic-Search_push.ipynb
+++ b/Heuristic-Search_push.ipynb
@@ -22,9 +22,9 @@
       },
       "outputs": [],
       "source": [
-        "!git config --global user.name \"PiyaNeu\"\n",
-        "!git config --global user.email \"tarpiya.n@gmail.com\"\n",
-        "!git config --global user.password \"md5sha1#\""
+        "!git config --global user.name \"username\"\n",
+        "!git config --global user.email \"email@gmail.com\"\n",
+        "!git config --global user.password \"password\""
       ]
     },
     {
